--- a/06_Bank_customer_churn_forecast/06_Supervised_learning_bank_customer_churn_forecast.ipynb
+++ b/06_Bank_customer_churn_forecast/06_Supervised_learning_bank_customer_churn_forecast.ipynb
@@ -12,15 +12,12 @@
    "metadata": {},
    "source": [
     "## Прогноз оттока клиентов из банка\n",
-    "Из «Бета-Банка» стали уходить клиенты. Каждый месяц. Немного, но заметно. Банковские маркетологи посчитали: сохранять текущих клиентов дешевле, чем привлекать новых.\n",
     "\n",
-    "Нужно спрогнозировать, уйдёт клиент из банка в ближайшее время или нет. Вам предоставлены исторические данные о поведении клиентов и расторжении договоров с банком. \n",
+    "Исходные данные - исторические данные о поведении клиентов и расторжении договоров с банком. \n",
     "\n",
-    "Постройте модель с предельно большим значением *F1*-меры. Чтобы сдать проект успешно, нужно довести метрику до 0.59. Проверьте *F1*-меру на тестовой выборке самостоятельно.\n",
+    "Задача - спрогнозировать, уйдёт клиент из банка в ближайшее время или нет, построить модель классификации.\n",
     "\n",
-    "Дополнительно измеряйте *AUC-ROC*, сравнивайте её значение с *F1*-мерой.\n",
-    "\n",
-    "Источник данных: [https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling](https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling)"
+    "Источник данных: https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling"
    ]
   },
   {
